force-app/main/objects/Courses__c.object
<CustomObject>
    <fields>
        <fullName>Department_Code__c</fullName>
        <label>Department Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COOGCSC</fullName>
                    <default>true</default>
                    <label>COOGCSC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiscountApproved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Choose a name with discount approval permission from the look-up</inlineHelpText>
        <label>Discount Approved By</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Discounts can only be approved by selected users.</errorMessage>
            <filterItems>
                <field>User.Approve_CB_Discounts__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distribution_Total__c</fullName>
        <formula>Courier__c  +  Other__c +  Print__c  +  UK_Materials__c  +  Sundries__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact_Director__c</fullName>
        <description>Created for Qualtrics and is being used in Outbound message.</description>
        <formula>Course_Director__r.Do_Not_Contact__c</formula>
        <label>Do Not Contact Director</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>To replace duration formula field renamed to Old</description>
        <inlineHelpText>Number of days the course runs for</inlineHelpText>
        <label>Duration</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_time__c</fullName>
        <label>End time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Expected_Despatch_Date__c</fullName>
        <label>Expected Despatch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <inlineHelpText>Expense value for incompany courses - note this is in the currency of the course</inlineHelpText>
        <label>Expense Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expense_Credit_Amount__c</fullName>
        <label>Expense Credit Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expense_Credit_Date__c</fullName>
        <label>Expense Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Credit_Notes__c</fullName>
        <description>For SSC use</description>
        <label>Expense Credit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expense_Credit_Reason__c</fullName>
        <label>Expense Credit Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S04 - Client Order Error</fullName>
                </value>
                <value>
                    <fullName>S05 - SOE Operator Error</fullName>
                </value>
                <value>
                    <fullName>S07 - Client Cancelled Training</fullName>
                </value>
                <value>
                    <fullName>S08 - SHL Cancelled Course</fullName>
                </value>
                <value>
                    <fullName>S09 - Goodwill Gesture</fullName>
                </value>
                <value>
                    <fullName>S11 - System Error</fullName>
                </value>
                <value>
                    <fullName>S12 - Requestor Error</fullName>
                </value>
                <value>
                    <fullName>S13 – Client Support Operator Error</fullName>
                </value>
                <value>
                    <fullName>S14 – Training Operator Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Credit_Status__c</fullName>
        <label>Expense Credit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to be credited</fullName>
                </value>
                <value>
                    <fullName>Queried</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Completed via order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Credit_Text_Description__c</fullName>
        <label>Expense Credit Text Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expense_Invoice_Date__c</fullName>
        <label>Expense Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Invoice_Notes__c</fullName>
        <inlineHelpText>For SSC use</inlineHelpText>
        <label>Expense Invoice Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expense_Invoice_Status__c</fullName>
        <label>Expense Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to be invoiced</fullName>
                </value>
                <value>
                    <fullName>Queried</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Completed via order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Invoice_Text_Description__c</fullName>
        <label>Expense Invoice Text Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expense_Item_Master_Lookup__c</fullName>
        <label>Expense Credit IM code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_SUN_Credit_Note_Number__c</fullName>
        <label>Expense SUN Credit Note Number</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_SUN_Order_Number__c</fullName>
        <label>Expense SUN Order Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_night_price__c</fullName>
        <label>Course Extra Night Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Follow_up_Day__c</fullName>
        <label>Follow Up Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full__c</fullName>
        <description>Formula field to display full Course using flag image</description>
        <formula>If(  Course_Free_Spaces__c &lt;=0, IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000Xjc7&quot;, &quot;Course Full&quot;),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Depth_Dates__c</fullName>
        <inlineHelpText>For APac use for In Depth course dates only</inlineHelpText>
        <label>In Depth Dates</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inco_Expense_IM_Code__c</fullName>
        <defaultValue>&quot;DEB&quot;</defaultValue>
        <inlineHelpText>This code should always be the same so is for information only</inlineHelpText>
        <label>Expense Item Master Lookup</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Language__c</fullName>
        <label>Invoice Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Swiss</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Notes__c</fullName>
        <inlineHelpText>For SSC use</inlineHelpText>
        <label>Invoice Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed via order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Text_Description__c</fullName>
        <label>Invoice Text Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsAutomationBypassed__c</fullName>
        <formula>AutomationBypassDateTime__c &gt; (NOW() - 0.00005787037)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsAutomationBypassed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Master_Lookup__c</fullName>
        <inlineHelpText>Sun Item Master code lookup for SOE</inlineHelpText>
        <label>Item Master Lookup</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Profit_Centre__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Inco3601-4</fullName>
                </value>
                <value>
                    <fullName>Inco3604-5</fullName>
                </value>
                <value>
                    <fullName>Inco3604-8</fullName>
                </value>
                <value>
                    <fullName>Inco3605-8</fullName>
                </value>
                <value>
                    <fullName>Inco3606-7</fullName>
                </value>
                <value>
                    <fullName>Inco3608-9</fullName>
                </value>
                <value>
                    <fullName>Inco3609-12</fullName>
                </value>
                <value>
                    <fullName>Inco3609-15</fullName>
                </value>
                <value>
                    <fullName>Inco360HD</fullName>
                </value>
                <value>
                    <fullName>IncoACDC11-15</fullName>
                </value>
                <value>
                    <fullName>IncoACDC4-5</fullName>
                </value>
                <value>
                    <fullName>IncoACDC4-8</fullName>
                </value>
                <value>
                    <fullName>IncoACDC6-10</fullName>
                </value>
                <value>
                    <fullName>IncoACDC9-15</fullName>
                </value>
                <value>
                    <fullName>IncoASST11-15</fullName>
                </value>
                <value>
                    <fullName>IncoASST1-4</fullName>
                </value>
                <value>
                    <fullName>IncoASST4-5</fullName>
                </value>
                <value>
                    <fullName>IncoASST4-8</fullName>
                </value>
                <value>
                    <fullName>IncoASST5-8</fullName>
                </value>
                <value>
                    <fullName>IncoASST6-10</fullName>
                </value>
                <value>
                    <fullName>IncoASST9-12</fullName>
                </value>
                <value>
                    <fullName>IncoASST9-15</fullName>
                </value>
                <value>
                    <fullName>IncoBCOMBO11-15</fullName>
                </value>
                <value>
                    <fullName>IncoBCOMBO4-5</fullName>
                </value>
                <value>
                    <fullName>IncoBCOMBO6-10</fullName>
                </value>
                <value>
                    <fullName>IncoBOPQ11-15</fullName>
                </value>
                <value>
                    <fullName>IncoBOPQ4-5</fullName>
                </value>
                <value>
                    <fullName>IncoBOPQ6-10</fullName>
                </value>
                <value>
                    <fullName>IncoBOT11-15</fullName>
                </value>
                <value>
                    <fullName>IncoBOT4-5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Late_Course_Booking__c</fullName>
        <label>Late Course Booking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 day</fullName>
                </value>
                <value>
                    <fullName>2 days</fullName>
                </value>
                <value>
                    <fullName>3 days</fullName>
                </value>
                <value>
                    <fullName>4 days</fullName>
                </value>
                <value>
                    <fullName>5 days</fullName>
                </value>
                <value>
                    <fullName>6 days</fullName>
                </value>
                <value>
                    <fullName>7 days</fullName>
                </value>
                <value>
                    <fullName>8 days</fullName>
                </value>
                <value>
                    <fullName>9 days</fullName>
                </value>
                <value>
                    <fullName>10 days</fullName>
                </value>
                <value>
                    <fullName>11 days</fullName>
                </value>
                <value>
                    <fullName>12 days</fullName>
                </value>
                <value>
                    <fullName>13 days</fullName>
                </value>
                <value>
                    <fullName>14 days</fullName>
                </value>
                <value>
                    <fullName>15 days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>Lead source for Sun SOE data entry</description>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>L01 - Advertisement</fullName>
                </value>
                <value>
                    <fullName>L02 - News story / article</fullName>
                </value>
                <value>
                    <fullName>L03 - SHL newsletter</fullName>
                </value>
                <value>
                    <fullName>L04 - Promotional campaign email</fullName>
                </value>
                <value>
                    <fullName>L05 - Promotional campaign direct mail</fullName>
                </value>
                <value>
                    <fullName>L06 - Promotional campaign call</fullName>
                </value>
                <value>
                    <fullName>L07 - SHL Sales / Account Manager / Consultant discussion</fullName>
                </value>
                <value>
                    <fullName>L08 - SHL Duty Consultant</fullName>
                </value>
                <value>
                    <fullName>L09 - SHL Partner</fullName>
                </value>
                <value>
                    <fullName>L10 - SHL website promotion</fullName>
                </value>
                <value>
                    <fullName>L11 - Other (non-SHL) website promotion</fullName>
                </value>
                <value>
                    <fullName>L12 - Reputation / referral</fullName>
                </value>
                <value>
                    <fullName>L13 - Conference / seminar attendance</fullName>
                </value>
                <value>
                    <fullName>L14 - SHL training course attendance</fullName>
                </value>
                <value>
                    <fullName>L15 - Exhibition / trade show attendance</fullName>
                </value>
                <value>
                    <fullName>LZZ - No specified source (eg. simple repeat order)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximum_Delegates__c</fullName>
        <inlineHelpText>This can be a maximum of 2 digits</inlineHelpText>
        <label>Max Delegates</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Course_Price__c</fullName>
        <formula>Total_Course_Price__c  -  Discount_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Course Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Units_Transferred__c</fullName>
        <description>Specify number of units transferred</description>
        <label>No. of Units Transferred</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packing_Date__c</fullName>
        <label>Packing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Packing_in_Progress__c</fullName>
        <label>Packing in Progress?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to account for incompany or partner course</description>
        <inlineHelpText>Use this to record the account for Partner and In company courses</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Country__c</fullName>
        <label>Partner Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Jamaica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Logo_Content_Version_ID__c</fullName>
        <description>Holds the Latest Partner Logo Content Version ID</description>
        <label>Partner Logo Content Version ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Logo_base64_Type__c</fullName>
        <description>Holds the partner logo data type</description>
        <label>Partner Logo base64 Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>People_Management_Workshop__c</fullName>
        <description>For recording modules which make up the PMW  JM 1/1/11, renamed label.</description>
        <inlineHelpText>This only applies to the Incompany PMW course type.</inlineHelpText>
        <label>Workshop Modules</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Course_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Selecting Top Performers</fullName>
                </value>
                <value>
                    <fullName>2 - Advanced Job Analysis</fullName>
                </value>
                <value>
                    <fullName>3 - Essential Assessment Practices</fullName>
                </value>
                <value>
                    <fullName>4 - Assessment Centre Design</fullName>
                </value>
                <value>
                    <fullName>5 - Managing Assessment Centres</fullName>
                </value>
                <value>
                    <fullName>6 - Assessing People&apos;s Performance</fullName>
                </value>
                <value>
                    <fullName>7 - Essential Interviewing Skills</fullName>
                </value>
                <value>
                    <fullName>8 - Advanced Interviewing Techniques</fullName>
                </value>
                <value>
                    <fullName>9 - Constructive Feedback Skills</fullName>
                </value>
                <value>
                    <fullName>10 - Evaluating Assessment Results</fullName>
                </value>
                <value>
                    <fullName>OPQ Linking scales - WS1</fullName>
                </value>
                <value>
                    <fullName>Manager Feedback - WS2</fullName>
                </value>
                <value>
                    <fullName>Development planning - WS3</fullName>
                </value>
                <value>
                    <fullName>Building teams - WS4</fullName>
                </value>
                <value>
                    <fullName>Onboarding - WS5</fullName>
                </value>
                <value>
                    <fullName>Feed Forward - WS6</fullName>
                </value>
                <value>
                    <fullName>Leadership development - WS7</fullName>
                </value>
                <value>
                    <fullName>Managerial Development - WS8</fullName>
                </value>
                <value>
                    <fullName>Volume recruitment - MC4</fullName>
                </value>
                <value>
                    <fullName>Restructuring - MC9</fullName>
                </value>
                <value>
                    <fullName>Managing Risk - MC6</fullName>
                </value>
                <value>
                    <fullName>Succession Planning - MC7</fullName>
                </value>
                <value>
                    <fullName>Talent Retention - MC8</fullName>
                </value>
                <value>
                    <fullName>Trends in Personality - MC5</fullName>
                </value>
                <value>
                    <fullName>Effective Business Partner - MC10</fullName>
                </value>
                <value>
                    <fullName>HR Business case - MC1</fullName>
                </value>
                <value>
                    <fullName>Measuring Assessment - MC2</fullName>
                </value>
                <value>
                    <fullName>Corporate Values - MC3</fullName>
                </value>
                <value>
                    <fullName>New system</fullName>
                </value>
                <value>
                    <fullName>Existing system</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Course_Deadline__c</fullName>
        <label>Pre-Course Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Course_work_link__c</fullName>
        <label>Pre Course Work Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Print__c</fullName>
        <label>Print</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profit_Centre__c</fullName>
        <inlineHelpText>Where the revenue is recognised</inlineHelpText>
        <label>Profit Centre</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abu Dhabi - AD1</fullName>
                </value>
                <value>
                    <fullName>Australia - AU1</fullName>
                </value>
                <value>
                    <fullName>Belgium - BE5</fullName>
                </value>
                <value>
                    <fullName>Canada - CA1</fullName>
                </value>
                <value>
                    <fullName>China - CN1</fullName>
                </value>
                <value>
                    <fullName>Denmark - DK1</fullName>
                </value>
                <value>
                    <fullName>Finland - FI1</fullName>
                </value>
                <value>
                    <fullName>France - FR1</fullName>
                </value>
                <value>
                    <fullName>Germany - DE1</fullName>
                </value>
                <value>
                    <fullName>Hong Kong - HK1</fullName>
                </value>
                <value>
                    <fullName>India - IN1</fullName>
                </value>
                <value>
                    <fullName>Ireland - IE1</fullName>
                </value>
                <value>
                    <fullName>Italy - IT1</fullName>
                </value>
                <value>
                    <fullName>Middle East - ME1</fullName>
                </value>
                <value>
                    <fullName>Netherlands - NL5</fullName>
                </value>
                <value>
                    <fullName>New Zealand - NZ1</fullName>
                </value>
                <value>
                    <fullName>Norway - NO1</fullName>
                </value>
                <value>
                    <fullName>Philippines - PH1</fullName>
                </value>
                <value>
                    <fullName>Poland - PL1</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia - SA5</fullName>
                </value>
                <value>
                    <fullName>Singapore - SG1</fullName>
                </value>
                <value>
                    <fullName>South Africa - ZA1</fullName>
                </value>
                <value>
                    <fullName>Spain - ES1</fullName>
                </value>
                <value>
                    <fullName>Sweden - SE1</fullName>
                </value>
                <value>
                    <fullName>Switzerland - CH1</fullName>
                </value>
                <value>
                    <fullName>UK - UK1</fullName>
                </value>
                <value>
                    <fullName>US - US5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Number1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Number</label>
        <referenceTo>ProjectObject__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <label>Project Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Available__c</fullName>
        <label>Qualification Available</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>360</fullName>
                </value>
                <value>
                    <fullName>360F</fullName>
                </value>
                <value>
                    <fullName>A&amp;DC</fullName>
                </value>
                <value>
                    <fullName>ASST</fullName>
                </value>
                <value>
                    <fullName>CBI</fullName>
                </value>
                <value>
                    <fullName>CBITTT</fullName>
                </value>
                <value>
                    <fullName>DHPT</fullName>
                </value>
                <value>
                    <fullName>Div&amp;Dis</fullName>
                </value>
                <value>
                    <fullName>JACD</fullName>
                </value>
                <value>
                    <fullName>MAS</fullName>
                </value>
                <value>
                    <fullName>M-PERF</fullName>
                </value>
                <value>
                    <fullName>MQ</fullName>
                </value>
                <value>
                    <fullName>OPQ</fullName>
                </value>
                <value>
                    <fullName>OPQ Re-Cert</fullName>
                </value>
                <value>
                    <fullName>OT</fullName>
                </value>
                <value>
                    <fullName>PAA-Light</fullName>
                </value>
                <value>
                    <fullName>TA</fullName>
                </value>
                <value>
                    <fullName>COMPD</fullName>
                </value>
                <value>
                    <fullName>ATP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualification_required__c</fullName>
        <label>Qualification Required</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OT</fullName>
                </value>
                <value>
                    <fullName>OPQ</fullName>
                </value>
                <value>
                    <fullName>TA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_No__c</fullName>
        <formula>Billing_Contact__r.Registration_Number__c</formula>
        <label>Registration No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <label>Registration Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rooms_Booked__c</fullName>
        <label>Rooms Booked</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SSC_Email__c</fullName>
        <label>SSC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SUN_Credit_Note_Number__c</fullName>
        <label>SUN Credit Note Number</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Certificates_in_English__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the Email and the Certificate will be generated in English instead of the language defined in the Delivery Language field</description>
        <inlineHelpText>When checked the Email and the Certificate will be generated in English instead of the language defined in the Delivery Language field</inlineHelpText>
        <label>Send Email and Certificates in English</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Course_Materials__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Standard Course Materials?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_time__c</fullName>
        <label>Start time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Sun_Order_Number__c</fullName>
        <description>For incompany, internal and partner courses where the invoice is for the course not per booking</description>
        <inlineHelpText>Add the Sun order number for any courses which are invoiced for the whole course not per booking. Format must be xxx/xxxxxx.</inlineHelpText>
        <label>SUN Order Number</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>